Fix flickering after modal dialog is opened and (page) scrollbar disappears.

--- a/FS.TimeTracking.UI.Angular/src/styles.scss
+++ b/FS.TimeTracking.UI.Angular/src/styles.scss
@@ -25,7 +25,6 @@ i.bi {
 /* ----------------------------------------- */
 /* Custom extensions
 /* ----------------------------------------- */
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -43,6 +42,12 @@ i.bi {
 /* ----------------------------------------- */
 /* @ngneat/dialog
 /* ----------------------------------------- */
+html {
+  // Fix flickering after modal dialog is opened and (page) scrollbar disappears.
+  // See https://stackoverflow.com/a/59407573/1271211, https://aykevl.nl/2014/09/fix-jumping-scrollbar
+  margin-left: calc(100vw - 100%);
+}
+
 ngneat-dialog {
   .ngneat-dialog-content {
     width: 100%;
